    All config nodes now include a comment with the default value of the node to use as reference
    Expanded settings relating to purging users who have not leveled or users who had not logged in for many months
    Acrobatic's Dodge XP increased from 120 -> 480
    Fishing's always catch fish setting now defaults to true instead of false
    NOTE: Not every config key that was renamed will be listed here
    Admins will now be notified if a player trips over-fishing exploit detection 3+ times in a row (Locale: "Fishing.OverFishingDetected")
        Note: Admins are players who are op or have adminchat permission.

    Bug Fixes
    Fixed a bug where Blast Minings cooldown was not being displayed correctly
    Fixed a bug where players who started at level 1 would not be purged from the DB for being "powerless"
    Fixed a potential bug where players could be awarded XP for cancelled tame events
    Fixed a bug where party size limits were only counting online players

    Permission Node Changes
    Removed "mcmmo.motd" because it makes no sense to have this as a player permission when its a config option
    Removed "mcmmo.showversion" because this one also makes no sense

    Config Changes

    All author ad-type (donations, urls, etc) message config options will now be found in "author_support_advertisements.conf"
    Config option "URL_Links" renamed -> "Show-Website-Links"
    Added config option for showing author paypal info in /mcmmo (previously this was tied to the motd setting)
    Added config option for showing author patreon links in various commands

    Automated backup config options will now be found in "automated_backups.conf"
    "Last_24_Hours", "Daily_Last_Week", "Weekly_Past_Months" have been replaced with "Old-File-Age-Limit-In-Days" which does the same thing